# beancount-parser-lima

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  auto-test-cases.cc  auto-test-cases.done.include.cc  auto-test-cases.partial.cc  auto-test-cases.todo.odds.cc  build.rs  flake.nix  justfile
.cargo/: config.toml
auto-test-cases/: Arithmetic.NumberExprDifferentPlaces.beancount  Arithmetic.NumberExprDifferentPlaces.txtpb  Arithmetic.NumberExprDivide.txtpb  Arithmetic.NumberExprGroups.txtpb  Arithmetic.NumberExprMultiply.beancount  Arithmetic.NumberExprMultiply.txtpb  Arithmetic.NumberExprPrecedence.txtpb  Arithmetic.NumberExprSubtract.txtpb  Balance.TotalCost.beancount  Balance.TotalPrice.txtpb  Comment.CommentAfterPostings.beancount  Comment.CommentAfterTransactionStart.beancount  DeprecatedOptions.DeprecatedOption.txtpb  DeprecatedOptions.DeprecatedPlugin.txtpb  DisplayContextOptions.RenderCommasError.txtpb  DisplayContextOptions.RenderCommasNo.txtpb  DisplayContextOptions.RenderCommasYes.txtpb  Document.DocumentLinks.beancount  Document.DocumentLinks.txtpb  Document.DocumentNoTagsLinks.txtpb  Document.DocumentTags.beancount  Document.DocumentTags.txtpb  Expressions.ExplicitPrecision.beancount  Expressions.ExplicitPrecision.txtpb  Expressions.ExplicitPrecision2.beancount  Expressions.ExplicitPrecision2.txtpb  IncompleteInputs.CostAverage.beancount  IncompleteInputs.CostAverage.txtpb  IncompleteInputs.CostAverageWithOther.beancount  IncompleteInputs.CostEmptyWithOther.beancount  IncompleteInputs.CostMissingBasis.txtpb  IncompleteInputs.CostMissingCurrency.beancount  IncompleteInputs.CostMissingCurrency.txtpb  IncompleteInputs.CostMissingNumberTotal.beancount  IncompleteInputs.CostMissingNumbers.txtpb  IncompleteInputs.CostNoNumberTotal.beancount  IncompleteInputs.CostNoNumberTotal.txtpb  IncompleteInputs.PriceMissingNumber.txtpb  IncompleteInputs.PriceNone.txtpb  IncompleteInputs.UnitsFull.beancount  (+158 more)
auto-test-cases.partial/: Currencies.DifferentCostAndPriceCurrency.beancount  Currencies.DifferentCostAndPriceCurrency.txtpb  TotalsAndSigns.PriceNegative.beancount  TotalsAndSigns.PriceNegative.txtpb  TotalsAndSigns.TotalCost.beancount  TotalsAndSigns.TotalCost.txtpb  TotalsAndSigns.TotalCostInvalid.beancount  TotalsAndSigns.TotalCostInvalid.txtpb  TotalsAndSigns.TotalCostNegative.beancount  TotalsAndSigns.TotalCostNegative.txtpb  TotalsAndSigns.TotalPriceInverted.beancount  TotalsAndSigns.TotalPriceInverted.txtpb  TotalsAndSigns.TotalPriceNegative.txtpb  TotalsAndSigns.TotalPricePositive.txtpb
beancount-parser/: Cargo.toml
beancount-parser-lima/: Cargo.toml  README.md  build.rs
beancount-parser-lima-python/: Cargo.toml  README.md  pyproject.toml
beancount-parser-lima-python/docker/: Dockerfile
beancount-parser-lima-python/python-examples/: parse.py
beancount-parser-lima-python/src/: conversions.rs  lib.rs  types.rs
beancount-parser-lima-python/src/types/: format.rs
beancount-parser-lima/examples/: check-postings-balance.rs  check.rs  dump-tokens.rs  dump.rs  extract.rs
beancount-parser-lima/examples/data/: error-duplicate-options.beancount  full.beancount
beancount-parser-lima/examples/data/error-include-duplicate/: included.beancount
beancount-parser-lima/protobuf/: README.md
beancount-parser-lima/src/: format.rs  lexer.rs  lib.rs  options.rs  parsers.rs  proto.rs  types.rs
beancount-parser-lima/src/beancount2proto/: main.rs
beancount-parser-lima/src/lexer/: tests.rs
beancount-parser-lima/src/parsers/: tests.rs
beancount-parser-lima/tests/: parser_tests.rs  proto_parser_tests.rs  tests.txtpb
beancount-parser-lima/tests/helpers/: mod.rs
beancount-parser-lima/tests/proto/: beancount.rs  mod.rs
beancount-parser-lima/tests/proto/beancount/: tests.proto
beancount-parser-lima/tests/test_support/: mod.rs
beancount-parser-tests/: parser-entry-types.balance.txtpb  parser-entry-types.transaction-two-strings.txtpb
beancount-store/: Cargo.toml
beancount-store/src/: lib.rs  types.rs
beancount-types/: Cargo.toml
examples/: check-postings-balance.rs  check.rs  chumsky_dump.rs  dump-tokens.rs  dump.rs  dump_tokens.rs  extract.rs  logos_dump.rs  runit.rs  validate.rs
protobuf/: README.md
src/: format.rs  lexer.rs  lexer_chumsky.rs  lib.rs  options.rs  parsed_to_store.rs  parser.rs  parser_nom.rs  parsers.rs  sort.rs  sources.rs  store.rs  tests.rs  trim.rs  types.rs
test-cases/: Arithmetic.NumberExprAdd.beancount  Arithmetic.NumberExprAdd.txtpb  Arithmetic.NumberExprDifferentPlaces.txtpb  Arithmetic.NumberExprDifferentPlaces2.beancount  Arithmetic.NumberExprDifferentPlaces2.txtpb  Arithmetic.NumberExprDivide.beancount  Arithmetic.NumberExprGroups.beancount  Arithmetic.NumberExprMultiply.txtpb  (+255 more)
test-cases-todo/: LexerAndParserErrors.GrammarExceptionsClose.txtpb  LexerAndParserErrors.GrammarExceptionsCompoundAmount.beancount  LexerAndParserErrors.GrammarExceptionsCompoundAmount.txtpb  LexerAndParserErrors.GrammarExceptionsEvent.beancount  LexerAndParserErrors.GrammarExceptionsEvent.txtpb  LexerAndParserErrors.GrammarExceptionsInclude.beancount  LexerAndParserErrors.GrammarExceptionsKeyValue.txtpb  LexerAndParserErrors.GrammarExceptionsLotCostDate.txtpb  LexerAndParserErrors.GrammarExceptionsPlugin.txtpb  LexerAndParserErrors.GrammarExceptionsPosting.beancount  LexerAndParserErrors.GrammarExceptionsPrice.beancount  LexerAndParserErrors.GrammarExceptionsPushtag.beancount  LexerAndParserErrors.GrammarExceptionsTagLinkLink.txtpb  LexerAndParserErrors.GrammarExceptionsTagLinkTag.txtpb  LexerAndParserErrors.GrammarSyntaxError.txtpb  LexerAndParserErrors.GrammarSyntaxErrorRecovery.txtpb  LexerAndParserErrors.GrammarSyntaxErrorRecovery2.txtpb  LexerAndParserErrors.LexerErrorsInPostings.txtpb  LexerAndParserErrors.LexerInvalidToken.txtpb  ParserInclude.IncludeRelativeFromString.txtpb  ParserPlugin.PluginWithConfig.txtpb  SyntaxErrors.ErrorInTransactionLine.txtpb  SyntaxErrors.NoFinalNewline.txtpb  Whitespace.IndentError1.beancount  Whitespace.IndentError1.txtpb
test-cases-unsupported/: ParserInclude.IncludeAbsolute.beancount
(+69 files in other folders)
