[package]
name = "beancount-parser-lima"
version = "0.14.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A zero-copy parser for Beancount"
homepage = "https://github.com/tesujimath/beancount-parser-lima"
repository = "https://github.com/tesujimath/beancount-parser-lima"
readme = "README.md"
exclude = ["/examples/images/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_format = "2.0.3"
rust_decimal = "1.40.0"
strum = "0.27.2"
strum_macros = "0.27.2"
time = "0.3.46"
anyhow = "1.0.100"
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["regex"] }
either = "1.15.0"
logos = "0.16.1"
protobuf = "3.7.2"
unescaper = "0.1.8"
glob = "0.3.3"

[dev-dependencies]
derive_more = { version = "2.1.1", features = ["display"] }
itertools = "0.14.0"
proptest = "1.9.0"
regex = "1.12.3"
rstest = "0.26.1"
rust_decimal_macros = "1.40.0"
stats_alloc = "0.1.10"
test-case = "3.3.1"
time = { version = "0.3.46", features = ["parsing"] }
xflags = "0.3.2"

[build-dependencies]
protobuf-codegen = "3.7.2"
