[package]
name = "beancount-parser-lima"
version = "0.16.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A zero-copy parser for Beancount"
homepage = "https://github.com/tesujimath/beancount-parser-lima"
repository = "https://github.com/tesujimath/beancount-parser-lima"
readme = "README.md"
exclude = ["/examples/images/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14"
lazy_format = "2.0"
rust_decimal = "1.40"
strum = "0.27"
strum_macros = "0.27"
time = "0.3"
ariadne = "0.6"
chumsky = { version = "0.12", features = ["regex"] }
either = "1.15"
logos = "0.16"
unescaper = "0.1"
glob = "0.3"

[dev-dependencies]
derive_more = { version = "2.1", features = ["display"] }
protobuf = "3.7"
proptest = "1.9"
regex = "1.12"
rstest = "0.26"
rust_decimal_macros = "1.40"
stats_alloc = "0.1"
test-case = "3.3"
time = { version = "0.3", features = ["parsing"] }
xflags = "0.3"

[build-dependencies]
protobuf-codegen = "3.7"
