[package]
name = "beancount-parser-lima-python"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for beancount-parser-lima"
homepage = "https://github.com/tesujimath/beancount-parser-lima"
repository = "https://github.com/tesujimath/beancount-parser-lima"

[lib]
name = "beancount_parser_lima"
crate-type = ["cdylib"]
doc = false

[dependencies]
beancount-parser-lima = { version = "0.6.0", path = "../beancount-parser-lima" }
lazy_format = "2.0.0"
pyo3 = { version = "0.21.0", features = ["extension-module", "rust_decimal"] }
rust_decimal = "1.29.1"
smallvec = "2.0.0-alpha.4"
string-interner = "0.15.0"
strum = "0.26.1"
strum_macros = "0.26.1"
time = "0.3.28"
