[package]
name = "beancount-parser-lima-python"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for beancount-parser-lima"
homepage = "https://github.com/tesujimath/beancount-parser-lima"
repository = "https://github.com/tesujimath/beancount-parser-lima"

[lib]
name = "beancount_parser_lima"
crate-type = ["cdylib"]
doc = false

[dependencies]
beancount-parser-lima = { version = "0.7.0", path = "../beancount-parser-lima" }
pyo3 = { version = "0.23.4", features = [
  "extension-module",
  "rust_decimal",
  "py-clone",
] }
string-interner = "0.19.0"
lazy_format = { workspace = true }
rust_decimal = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
time = { workspace = true }
