[build-system]
requires = ["maturin>=1.4.0,<2"]
build-backend = "maturin"

[project]
name = "beancount-parser-lima"
version = "0.7.1"
description = "Python bindings for beancount-parser-lima"
readme = "README.md"
requires-python = ">=3.7"
license = "Either of Apache License v2.0 or MIT License at your option"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/tesujimath/beancount-parser-lima"
Documentation = "https://github.com/tesujimath/beancount-parser-lima/blob/main/beancount-parser-lima-python/README.md"
Repository = "https://github.com/tesujimath/beancount-parser-lima"
Issues = "https://github.com/tesujimath/beancount-parser-lima/issues"

[tool.pyright]
venvPath = "."
venv = ".venv"
