[package]
name = "beancount-parser-lima"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A zero-copy parser for Beancount"
homepage = "https://github.com/tesujimath/beancount-parser-lima"
repository = "https://github.com/tesujimath/beancount-parser-lima"
readme = "README.md"
exclude = [
    "examples/images/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ariadne = "0.4.0"
# for bleeding edge ariadne
# ariadne= { path = "../../../../third-party/rust/ariadne" }
chumsky = { version = "1.0.0-alpha.6", features = ["label", "regex"] }
# for bleeding edge chumsky:
# chumsky = { git = "https://github.com/tesujimath/chumsky", branch = "one_of_ref-not_ref", features = ["label", "regex"] }
# chumsky = { path = "../../../../third-party/rust/chumsky", features = ["label", "regex"] }
either = "1.8.1"
lazy_format = "2.0.0"
logos = "0.14.0"
path-clean = "1.0.1"
protobuf = "3.4.0"
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
smallvec = "2.0.0-alpha.4"
strum = "0.26.1"
strum_macros = "0.26.1"
time = "0.3.28"
unescaper = "0.1.4"

[dev-dependencies]
derive_more = "0.99.17"
itertools = "0.12.1"
proptest = "1.2.0"
rstest = "0.18.2"
stats_alloc = "0.1.10"
test-case = "3.1.0"
time = { version = "0.3.28", features = ["parsing"] }
xflags = "0.3.1"

[build-dependencies]
protobuf-codegen = "3.4.0"
