[package]
name = "beancount-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beancount-parser = { path = "../beancount-parser" }
beancount-types = { path = "../beancount-types" }
log = "0.4.20"
nonempty = "0.8.1"
rust_decimal = "1.29.1"
string-interner = "0.14.0"
time = "0.3.28"
xflags = "0.3.1"

[dev-dependencies]
test-case = "3.1.0"
